Fix z-index for arrow in input addon

--- a/public/assets/css/opennemas/style.css
+++ b/public/assets/css/opennemas/style.css
@@ -530,7 +530,7 @@ th .dropdown .container ul > li .a {
 }
 
 .input-group-addon.primary .arrow {
-    z-index: 0;
+    z-index: 3;
 }
 
 /* =============================================================================
